--- a/about.html
+++ b/about.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>duan 4</title>
+    <title>about</title>
   </head>
   <body>
-    <h1>du an 4</h1>
-    <h2>sửa lần 1</h2>
-    <h2>sửa lần 2</h2>
+    about
   </body>
 </html>
